<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.xlt.chloeting.ui.views.ErrorView
        android:id="@+id/errorView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingVertical="30dp"
        android:paddingHorizontal="16dp"
        android:visibility="gone" />

    <ProgressBar
        android:id="@+id/loadingBar"
        style="@android:style/Widget.Material.Light.ProgressBar.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingVertical="50dp"
        android:paddingHorizontal="16dp"
        android:visibility="gone" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:scrollbars="vertical"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:fontFamily="@font/roboto_bold"
                android:text="Courses"
                android:textSize="16sp" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroupCourses"
                style="@style/Widget.MaterialComponents.ChipGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:chipSpacing="10dp"
                app:chipSpacingHorizontal="15dp"
                app:singleSelection="true">

                <com.xlt.chloeting.ui.views.ChipWithId
                    style="@style/Widget.Material3.Chip.Suggestion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:checked="true"
                    android:text="@string/chip_view_all"
                    android:textColor="@color/colors_chip_text"
                    app:chipBackgroundColor="@color/colors_chip" />

            </com.google.android.material.chip.ChipGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="15dp"
                android:fontFamily="@font/roboto_bold"
                android:text="Convenience"
                android:textSize="16sp" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroupConvenience"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:chipSpacingHorizontal="15dp"
                app:singleSelection="true">

                <com.xlt.chloeting.ui.views.ChipWithId
                    style="@style/Widget.Material3.Chip.Suggestion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:checkable="true"
                    android:text="@string/chip_view_all"
                    android:textColor="@color/colors_chip_text"
                    app:chipBackgroundColor="@color/colors_chip" />

            </com.google.android.material.chip.ChipGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="15dp"
                android:fontFamily="@font/roboto_bold"
                android:text="Dietary restrictions"
                android:textSize="16sp" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroupDietary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:chipSpacingHorizontal="15dp"
                app:singleSelection="true">

                <com.xlt.chloeting.ui.views.ChipWithId
                    style="@style/Widget.Material3.Chip.Suggestion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:checked="true"
                    android:text="@string/chip_view_all"
                    android:textColor="@color/colors_chip_text"
                    app:chipBackgroundColor="@color/colors_chip" />

            </com.google.android.material.chip.ChipGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="15dp"
                android:fontFamily="@font/roboto_bold"
                android:text="Cooking time"
                android:textSize="16sp" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroupTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:chipSpacingHorizontal="15dp"
                app:singleSelection="true">

                <com.xlt.chloeting.ui.views.ChipWithId
                    style="@style/Widget.Material3.Chip.Suggestion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="@string/chip_view_all"
                    android:checked="true"
                    android:textColor="@color/colors_chip_text"
                    app:chipBackgroundColor="@color/colors_chip"
                    tools:visibility="visible" />

            </com.google.android.material.chip.ChipGroup>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="15dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonClear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/button_clear_filter"
                    app:icon="@drawable/ic_refresh" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/buttonApply"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/button_apply_filter"
                    app:icon="@drawable/ic_check" />
            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>